--- a/teste.html
+++ b/teste.html
@@ -10,5 +10,6 @@
     
     <h3>titulo terciario</h3>
 
+    <img src="https://naturalterra.vtexassets.com/arquivos/ids/155863/Banana-Prata-Unidade.jpg?v=638778428672100000" alt="Otario não vai ver a imagem kkjkkjkkjkkj" width="200">
 </body>
 </html>
